# foldwrap_backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-4testing.yml  pyproject.toml  pytest.ini
src/: config.py  log.py  main.py  ress_rabbitmq.py
src/dao/: dao.py  dao_feedback.py  dao_figma_file.py  dao_user.py  mongo_json_encoder.py  oid.py  ress_redis.py
src/dao/maintenance/: dao_auth_log.py  dao_test.py
src/models/: email.py  export.py  feedback.py  figma_file.py  meta.py  user.py
src/models/lemonsqueezy/: subscription_details.py
src/models/maintenance/: test.py
src/services/: email.py  export.py  feedback.py  figma.py  foldwrap_banner.py  subscription.py
src/services/misc/: filesystem.py  fonts.py  png_optimizer.py  utils.py
src/services/users/: auth.py  crud.py  password_reset.py
src/tests/: conftest.py  manual_create_test_users.py  manual_foldwrap_banner.py  manual_font_convert.py  manual_test_figma_images.py  manual_test_logging.py  manual_test_redis.py  skip_test_figma.py  skip_test_photo.py  skip_test_users_password_reset.py  test_app.py  test_dao.py  test_feedback.py  test_png.py  test_subscriptions.py  test_user_profile_and_location.py  test_users_auth.py  test_users_crud.py  test_users_meta.py  testutils.py
src/views/: export.py  feedback.py  figma.py  info.py  subscription.py  temp_utilities.py  users_auth.py  users_crud.py
src/views/user/: password_reset.py
testing_assets/lmnsqz_webhook_test_jsons/: subscription_created.json  subscription_payment_success.json  subscription_updated_expired.json  subscription_updated_valid.json
(+3 files in other folders)
